--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
+    <title>Sali-Admin</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/babel" src="./src/main.jsx"></script>
+    <script type="text/babel" type="module"  src="./src/main.jsx"></script>
   </body>
   </html>
