--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sali-Admin</title>
+    <title>S.A.L.I Admin</title>
   </head>
   <body>
     <div id="root"></div>
-    <script  type="module"  src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
+<!-- Start of absoluterisktechnology Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=c3329ac2-9640-49c1-9572-5168b870a525"> </script>
+<!-- End of absoluterisktechnology Zendesk Widget script -->
   </html>
